--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-27 [美官员：在美上市中国公司须披露政府干预风险](/articles/dw/1041189.md)
+
+7-27 [欧盟第三国 捷克捐3万剂疫苗给台湾](/articles/dw/1041190.md)
+
 7-26 [香港羽球员伍家朗穿无区旗黑衣参赛遭批](/articles/dw/1041191.md)
 
 7-26 [担忧供应短缺和疫情 德国商业信心指数走低](/articles/dw/1041192.md)
@@ -596,8 +600,4 @@
 7-9 [美国撤军后 中国将在阿富汗书写新篇章？](/articles/dw/1041487.md)
 
 7-9 [生物新技术/辉瑞将申请施打第三剂应对变异毒株](/articles/dw/1041488.md)
-
-7-9 [汤姆·汉克斯庆祝65岁生日 影帝宝刀未老](/articles/dw/1041489.md)
-
-7-9 [这些家伙正在入侵印度](/articles/dw/1041490.md)
 
