--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-27 [12港人案被告获悉 潜逃台湾后会得陆委会帮助 陆委会称不知情](/articles/rfi/1025551.md)
+
 7-27 [欧盟宣布新冠疫苗已覆盖70%民众](/articles/rfi/1025552.md)
 
 7-27 [被骗亿万欧元 梵蒂冈开庭审理](/articles/rfi/1025553.md)
@@ -598,6 +600,4 @@
 7-21 [Delta疫情扩散 亚股涨跌互见 – 法国国际广播电台 - RFI](/articles/rfi/1025849.md)
 
 7-21 [全球逾1亿9136万人染疫 至少411万人丧生 – 法国国际广播电台 - RFI](/articles/rfi/1025850.md)
-
-7-21 [美国及其盟国谴责中国在网络空间展开“恶意”活动 - 法国报纸摘要](/articles/rfi/1025851.md)
 
