--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-27 [美防长：中国对南海的主权要求缺乏国际法依据](/articles/dw/1041174.md)
+
+7-27 [德国一化工园区发生“极危险”爆炸事故](/articles/dw/1041175.md)
+
 7-27 [德国运动员摘奥运首金 来自洪水灾区](/articles/dw/1041176.md)
 
 7-27 [德语媒体：坐视中国经济繁荣就是助长中共政权](/articles/dw/1041177.md)
@@ -596,8 +600,4 @@
 7-10 [当今世界是如何看待德国的？](/articles/dw/1041472.md)
 
 7-10 [中国为何大力整顿科技巨头？](/articles/dw/1041473.md)
-
-7-10 [澳门21名“不效忠”立法会参选人被DQ](/articles/dw/1041474.md)
-
-7-10 [香港政治环境日益严峻 支联会遣散职员](/articles/dw/1041475.md)
 
