--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-28 [清川书房｜南京人都是新冠感染者吗？如果不是，为什么处处被歧视和驱逐？](/articles/cdt/379696.md)
+
+7-28 [群英读书会｜郑州地铁口要建的不应是一面墙，而是一座碑](/articles/cdt/379698.md)
+
 7-28 [界面新闻｜孙大午案一审宣判，因寻衅滋事罪等八项罪名获刑18年](/articles/cdt/379701.md)
 
 7-28 [法理天地｜关于河南水灾的另类报道](/articles/cdt/379703.md)
@@ -596,8 +600,4 @@
 6-22 [极昼工作室｜二本毕业生的通宵洗车摊：他们从未摆脱生存困境](/articles/cdt/381207.md)
 
 6-22 [德国之声 | 近20年来首次  香港七一游行不办了](/articles/cdt/381213.md)
-
-6-22 [【CDT推荐】本周推荐媒体](/articles/cdt/381214.md)
-
-6-22 [【网络民议】百位说唱歌手献唱建党100周年  网友：100个faker的投名状](/articles/cdt/381217.md)
 
