--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+7-29 [美国重振“繁荣非洲”战略，提供与中国不同的繁荣之路](/articles/voa/1039188.md)
+
+7-29 [众院外委会共和党人呼吁议长尽快全院表决谴责新疆种族灭绝决议](/articles/voa/1039189.md)
+
+7-29 [布林肯会见谭德塞，讨论新冠溯源问题](/articles/voa/1039190.md)
+
+7-29 [中国推新政策鼓励“三孩”，专家称难以奏效](/articles/voa/1039191.md)
+
+7-29 [布林肯访问印度扩大印美伙伴关系](/articles/voa/1039192.md)
+
 7-29 [“帝国反击战”？英国向印太部署航母战斗群的深层考量](/articles/voa/1039193.md)
 
 7-29 [美参院外委会通过法案 将助台湾重返世卫组织](/articles/voa/1039194.md)
@@ -590,14 +600,4 @@
 7-15 [新冠大流行恐惧不散 中国经济增长放缓](/articles/voa/1039486.md)
 
 7-15 [美军机据信短暂访台 北京：外国舰机擅闯我领空行为将引发严重后果](/articles/voa/1039487.md)
-
-7-15 [亲北京学者促中共在港重夺话语权](/articles/voa/1039488.md)
-
-7-15 [中国外长敦促巴基斯坦调查公共汽车爆炸事件](/articles/voa/1039489.md)
-
-7-15 [白宫要义：默克尔来访，白宫国安会说有信心美德合作对抗中国](/articles/voa/1039490.md)
-
-7-15 [香港记协：国安法之下新闻自由空间急速萎缩](/articles/voa/1039491.md)
-
-7-15 [美中领导人都将出席APEC峰会继续角逐影响力](/articles/voa/1039492.md)
 
