--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-29 [美两党参议员敦促禁止把美国纾困法案资金用于购买华为与中兴设备](/articles/voa/1039186.md)
+
+7-29 [拜登与国会两党中间派参议员就基础设施支出计划达成一致](/articles/voa/1039187.md)
+
 7-29 [美国重振“繁荣非洲”战略，提供与中国不同的繁荣之路](/articles/voa/1039188.md)
 
 7-29 [众院外委会共和党人呼吁议长尽快全院表决谴责新疆种族灭绝决议](/articles/voa/1039189.md)
@@ -596,8 +600,4 @@
 7-15 [中国在比特币开采中的份额早在当局打压前就已下降](/articles/voa/1039484.md)
 
 7-15 [美台TIFA促产业链转移？“贸易北约”恐成中国下个噩梦](/articles/voa/1039485.md)
-
-7-15 [新冠大流行恐惧不散 中国经济增长放缓](/articles/voa/1039486.md)
-
-7-15 [美军机据信短暂访台 北京：外国舰机擅闯我领空行为将引发严重后果](/articles/voa/1039487.md)
 
