--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,24 @@
 美国之音
 ------
 
+7-31 [美众院共和党人推出自己的抗衡中国法案，佩洛西打算合并不同法案版本](/articles/voa/1039143.md)
+
+7-31 [美国体操名将退赛获理解支持，举国体制下的中国运动员行吗？](/articles/voa/1039144.md)
+
+7-31 [分析人士：美国加强与东南亚的军事关系以抗衡中国](/articles/voa/1039145.md)
+
+7-31 [又有镇压抗议的古巴官员受到美国制裁](/articles/voa/1039146.md)
+
+7-31 [香港首宗国安法案被告判囚9年 有市民指判刑过重或激起民愤](/articles/voa/1039147.md)
+
+7-31 [哈里斯将成为首位访问河内的美国副总统](/articles/voa/1039148.md)
+
+7-31 [塔利班袭击阿富汗的联合国设施](/articles/voa/1039149.md)
+
+7-31 [中国强势拒绝欧盟外交官走访新疆时会晤被监禁维吾尔族学者](/articles/voa/1039150.md)
+
+7-31 [中企海外上市遭遇困境，美证交会出招保护美国投资人](/articles/voa/1039151.md)
+
 7-31 [台湾派驻香港最后一位官员返台，台陆委会为最坏状况做准备](/articles/voa/1039152.md)
 
 7-30 [杜特尔特收回废除美菲军队互访协议决定，联美抗中再进一步](/articles/voa/1039153.md)
@@ -582,22 +600,4 @@
 7-17 [美国因中国在香港的镇压行动而制裁七名中国官员](/articles/voa/1039441.md)
 
 7-17 [中国向巴基斯坦施压，称“务必将恐袭凶手绳之以法”](/articles/voa/1039442.md)
-
-7-17 [中国疫苗抗变体能力弱 专家吁尽快施打外国加强针](/articles/voa/1039443.md)
-
-7-17 [一名联邦法官下令终止“梦想生”项目 现有受益人暂无虞](/articles/voa/1039444.md)
-
-7-17 [美德关系拉近 但如何对待中国仍有分歧](/articles/voa/1039445.md)
-
-7-17 [巴基斯坦总理：塔利班“感觉胜利在即”之际，为何要听我们的话？](/articles/voa/1039446.md)
-
-7-17 [拜登：向海地派遣美军不在议事日程上](/articles/voa/1039447.md)
-
-7-17 [美官员：美中双方仍在就副国务卿谢尔曼访华问题进行磋商](/articles/voa/1039448.md)
-
-7-17 [一名中国公民因串谋向中国出口军用舟筏及引擎而被判处三年半监禁](/articles/voa/1039449.md)
-
-7-17 [美国总统、中国国家主席出席亚太经合组织线上应对疫情峰会](/articles/voa/1039450.md)
-
-7-17 [布林肯国务卿发表声明 痛批国安法在香港实施一周年](/articles/voa/1039451.md)
 
