--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-4 [欧盟呼吁美国取消对欧洲旅行者入境禁令](/articles/dw/1041039.md)
+
+8-4 [德语媒体：中国如何使东奥会政治化](/articles/dw/1041040.md)
+
 8-4 [新冠疫苗：世卫呼吁缓打加强针 德国建议青少年接种](/articles/dw/1041041.md)
 
 8-4 [客座评论：如果美国真想在东南亚赢得民心](/articles/dw/1041042.md)
@@ -596,8 +600,4 @@
 7-18 [美澳军演 澳媒：中国首派两艘舰船监视](/articles/dw/1041337.md)
 
 7-18 [英国首相作为密切接触者开始自我隔离](/articles/dw/1041338.md)
-
-7-18 [德国总理候选人勘察灾情时哈哈大笑引发众怒](/articles/dw/1041339.md)
-
-7-18 [象群出走背后的西双版纳困局](/articles/dw/1041340.md)
 
