--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-5 [博明：北京对武统台湾“非常认真”，各方必须严肃看待](/articles/voa/1039064.md)
+
+8-5 [美印太司令：北京的行动令人有种“紧迫感”，必须采取威慑行动](/articles/voa/1039065.md)
+
 8-5 [中国对英国广播公司的河南水灾报道提出交涉](/articles/voa/1039066.md)
 
 8-5 [中国媒体降低对网游产业的批评声调](/articles/voa/1039067.md)
@@ -596,8 +600,4 @@
 7-21 [美副国务卿访华？ 学者：美中合作之窗“前所未有地变窄”](/articles/voa/1039362.md)
 
 7-21 [美国第一夫人启程前往东京率团出席奥运会](/articles/voa/1039363.md)
-
-7-21 [美日韩三方副外长会晤 进一步协调对华和朝鲜政策](/articles/voa/1039364.md)
-
-7-21 [挥舞国安法大棒 香港警方再拘捕前报社编辑](/articles/voa/1039365.md)
 
