--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+8-6 [因厦门聚会流亡海外  异议人士刘冰面临遣返中国](/articles/rfa/1044871.md)
+
+8-6 [上海禁止小学期末英语考试   教育学者预料将全国推行](/articles/rfa/1044872.md)
+
 8-6 [更多中企打入苹果供应链 分析：美国制裁面对 “上有政策下有对策”](/articles/rfa/1044873.md)
 
 8-6 [官方随意批评个别行业   金融市场成惊弓之鸟](/articles/rfa/1044874.md)
@@ -596,8 +600,4 @@
 7-2 [国际国内两重天：一边大肆庆祝   一边七成民众不信任习近平](/articles/rfa/1045169.md)
 
 7-2 [法国学者 : 中国共产党价值观只剩空壳](/articles/rfa/1045170.md)
-
-7-2 [共产党建党百年  加拿大另类庆生](/articles/rfa/1045171.md)
-
-7-1 [习近平党庆避谈西藏、新疆   学者：心虚家丑不敢提](/articles/rfa/1045172.md)
 
