--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+8-7 [文革再现？言论无自由？ 两名中外混血写作者的传奇经历](/articles/rfa/1044869.md)
+
+8-6 [湖南长沙富能案审讯在看守所进行   家属无处伸冤](/articles/rfa/1044870.md)
+
 8-6 [因厦门聚会流亡海外  异议人士刘冰面临遣返中国](/articles/rfa/1044871.md)
 
 8-6 [上海禁止小学期末英语考试   教育学者预料将全国推行](/articles/rfa/1044872.md)
@@ -596,8 +600,4 @@
 7-2 [国际知名中国学者：中共面临统治危机 美国应做好应对预案](/articles/rfa/1045167.md)
 
 7-2 [北京党庆日世界声援香港  中国战狼反击](/articles/rfa/1045168.md)
-
-7-2 [国际国内两重天：一边大肆庆祝   一边七成民众不信任习近平](/articles/rfa/1045169.md)
-
-7-2 [法国学者 : 中国共产党价值观只剩空壳](/articles/rfa/1045170.md)
 
