--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+8-7 [中国大陆新增本土新冠确诊75例 北京要求病例发生地全域来京人员接受健康管理](/articles/reuters/1034847.md)
+
+8-7 [强劲美国就业报告提振美元急升 周线涨幅料创七周来最大](/articles/reuters/1034848.md)
+
+8-7 [美股标普500指数和道指创纪录收盘高位 强劲就业报告提振周期股](/articles/reuters/1034849.md)
+
+8-7 [油价受需求担忧拖累下跌 周线创数月最大跌幅](/articles/reuters/1034850.md)
+
 8-7 [金价下跌逾2% 强劲的美国就业报告令美联储缩减押注增加](/articles/reuters/1034851.md)
 
 8-7 [中国海航集团重整计划草案提交期限延长三个月 因相关内容尚未最终确定](/articles/reuters/1034852.md)
@@ -592,12 +600,4 @@
 7-30 [新兴市场投资者担心经济增长前景 握有大量资金却暂不出手--汇丰调查](/articles/reuters/1035145.md)
 
 7-30 [美国国务卿布林肯称与伊朗的谈判进程不可能无限期进行下去](/articles/reuters/1035146.md)
-
-7-30 [调查：中国下重手整顿民营企业后 人民币自4月来首次转为净空仓](/articles/reuters/1035147.md)
-
-7-30 [全球芯片荒2023年上半年前看不到终点--意法半导体CEO](/articles/reuters/1035148.md)
-
-7-30 [领英更新政策指引 允许多数员工全时远程工作](/articles/reuters/1035149.md)
-
-7-30 [高盛将对离岸中资股的看法下调为“与市场持平” 但维持对A股的增持立场](/articles/reuters/1035150.md)
 
