--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+8-9 [法国健康通行证反对声中继续“扩权”](/articles/rfi/1025105.md)
+
 8-9 [塔利班快速推进，中亚安全局势面临挑战 - 法国报纸摘要](/articles/rfi/1025106.md)
 
 8-9 [历史学家余英时对现代政治的深刻洞察 - 美国专栏](/articles/rfi/1025107.md)
@@ -598,6 +600,4 @@
 8-1 [美司法部要求财政部将特朗普报税单提交国会](/articles/rfi/1025403.md)
 
 8-1 [立陶宛捐赠疫苗抵台 蔡英文致谢：努力让善的循环持续](/articles/rfi/1025404.md)
-
-8-1 [哈里斯8月出访新加坡、越南 将成为首位访问河内的美副总统](/articles/rfi/1025405.md)
 
