--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+8-10 [美股标普500指数下跌 但仍保持在纪录高位附近](/articles/reuters/1034780.md)
+
+8-10 [油价跌逾2%至三周低位 因中国疫情忧虑和美元走强](/articles/reuters/1034781.md)
+
+8-10 [金价重挫至逾四个月低位 因押注美联储将提前开始缩减经济支持](/articles/reuters/1034782.md)
+
+8-10 [路透测算的人民币中间价料开在6.4822元附近 较上日升18点](/articles/reuters/1034783.md)
+
 8-9 [中国央行报告：持续释放LPR改革潜力 推动实际贷款利率进一步降低](/articles/reuters/1034784.md)
 
 8-9 [中国央行报告：当前中国通胀压力可控 稳住通胀的关键还是要管住货币](/articles/reuters/1034785.md)
@@ -592,12 +600,4 @@
 8-2 [让监管“长出牙齿” 中国聚焦食品药品等领域扩大严重违法失信名单列入范围](/articles/reuters/1035078.md)
 
 8-2 [焦点：中国中央政治局纠偏运动式“减碳” 强调“先立后破”](/articles/reuters/1035079.md)
-
-8-2 [热点聚焦：中国监管浪潮还将持续 补漏洞同时还需增加政策透明度](/articles/reuters/1035080.md)
-
-8-2 [沪综指小幅低开 宏观政策料不会骤然转向但疫情成担忧](/articles/reuters/1035081.md)
-
-8-2 [美国扣押一艘新加坡油轮 称其向朝鲜运送油品违反对朝经济制裁](/articles/reuters/1035082.md)
-
-8-2 [中国卫健委：此轮疫情由德尔塔变异株输入引发 短期内仍有继续扩散的风险](/articles/reuters/1035083.md)
 
