--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-10 [联合国科学报告：全球升温成定局，极端天气将大幅增加](/articles/nyt/1046457.md)
+
 8-10 [简报：中国在疫情阴影下备战冬奥；联合国报告警告全球变暖已不可逆](/articles/nyt/1046458.md)
 
 8-9 [阿里解雇涉嫌强奸下属员工，受害人称此前向公司反映无果](/articles/nyt/1046459.md)
@@ -598,6 +600,4 @@
 6-9 [在家吃回转寿司：疫情期间日本寿司店出租传送带](/articles/nyt/1046755.md)
 
 6-9 [袭击阴影下，难以恢复正常生活的美国亚裔](/articles/nyt/1046756.md)
-
-6-9 [通胀担忧蔓延全球，中国采取措施平抑物价](/articles/nyt/1046757.md)
 
