--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+8-12 [禁止“涂鸦”？中国智能科技公司是否会成下一个华为？](/articles/voa/1038933.md)
+
+8-12 [报告：中企业海外扩张带来人权等负面影响不利中国成为负责任大国的愿景](/articles/voa/1038934.md)
+
+8-12 [加拿大谴责中国虐待被拘押的加拿大公民](/articles/voa/1038935.md)
+
+8-12 [美疾控中心建议孕妇接种新冠疫苗](/articles/voa/1038936.md)
+
 8-12 [塔利班继续扩大地盘 又攻占两省机场](/articles/voa/1038937.md)
 
 8-12 [美国与亚太盟国开始东南亚合作联合演习](/articles/voa/1038938.md)
@@ -592,12 +600,4 @@
 7-27 [布林肯首访印度讨论抗衡北京与新冠疫情等议题](/articles/voa/1039231.md)
 
 7-27 [极端天气肆虐世界各地，专家称气候变暖的影响超过预期](/articles/voa/1039232.md)
-
-7-27 [东京奥运台湾夺首金 ，郭婞淳抓举破奥运记录](/articles/voa/1039233.md)
-
-7-27 [专访宋怡明：谈明代与当今中国政治](/articles/voa/1039234.md)
-
-7-27 [中国整改科技业 富豪撒币捐款求避祸？](/articles/voa/1039235.md)
-
-7-27 [中国新任驻美大使人选秦刚周二赴美](/articles/voa/1039236.md)
 
