--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-12 [古巴民众示威事件周月 美国持续呼吁释放民众与网络自由](/articles/voa/1038930.md)
+
+8-12 [美国对阿富汗领导人说：国家未来在“他们的肩上”](/articles/voa/1038931.md)
+
+8-12 [拜登将于12月主持首届民主峰会](/articles/voa/1038932.md)
+
 8-12 [禁止“涂鸦”？中国智能科技公司是否会成下一个华为？](/articles/voa/1038933.md)
 
 8-12 [报告：中企业海外扩张带来人权等负面影响不利中国成为负责任大国的愿景](/articles/voa/1038934.md)
@@ -594,10 +600,4 @@
 7-28 [时事大家谈: 专访 习近平家人个人资料泄漏案主犯牛腾宇的母亲](/articles/voa/1039228.md)
 
 7-28 [郑州地铁死难者头七的悲哀：家人送花悼念亲人遇挡板](/articles/voa/1039229.md)
-
-7-28 [南京本土确诊新冠病例破百 当局提升社区管控措施](/articles/voa/1039230.md)
-
-7-27 [布林肯首访印度讨论抗衡北京与新冠疫情等议题](/articles/voa/1039231.md)
-
-7-27 [极端天气肆虐世界各地，专家称气候变暖的影响超过预期](/articles/voa/1039232.md)
 
