--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+8-12 [东升西降?  经济数据显示中国经济重回疫情时期](/articles/rfa/1044825.md)
+
+8-12 [专访:一个人的援助之路 让香港异议者托付家人的台湾女生](/articles/rfa/1044826.md)
+
+8-12 [北戴河会议结束后发首份文件   学者研判习近平将续任五年](/articles/rfa/1044827.md)
+
 8-12 [恒大要卖更多资产    以债养债行不通了？](/articles/rfa/1044828.md)
 
 8-12 [柬埔寨“一带一路”大坝 被指威胁数百万人生计](/articles/rfa/1044829.md)
@@ -594,10 +600,4 @@
 7-8 [【709六周年】中国维权律师之路已走到尽头?  微弱力量在高压中坚持](/articles/rfa/1045123.md)
 
 7-8 [中缅边界建千公里隔离墙 防偷渡及宗教渗透](/articles/rfa/1045124.md)
-
-7-8 [学者：没有自由、正义的中国发展模式不能持久](/articles/rfa/1045125.md)
-
-7-8 [中国互联网平台再遭罚  国际投资者掀抛售潮](/articles/rfa/1045126.md)
-
-7-8 [中国LGBT团体微信公众号集体被封  名称变为“未命名公众号”](/articles/rfa/1045127.md)
 
