--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,30 @@
 路透
 ------
 
+8-17 [多家知名对冲基金走霉运 在滴滴被查前大量入股--美国文件](/articles/reuters/1034506.md)
+
+8-17 [6月外资持有美债创去年2月来最高 但中国继续减持美国公债](/articles/reuters/1034507.md)
+
+8-17 [焦点：OPEC+认为没有必要满足美国的增产要求--消息人士](/articles/reuters/1034508.md)
+
+8-17 [中国政府已持有北京字节跳动1%股份 并有权任命一名董事--The Information](/articles/reuters/1034509.md)
+
+8-17 [中国首家外商独资基金公司贝莱德首只公募产品获批](/articles/reuters/1034510.md)
+
+8-17 [美国对Autopilot驾驶辅助系统展开正式调查 特斯拉股价重挫4.3%](/articles/reuters/1034511.md)
+
+8-17 [美国国务院不愿表态是否仍承认加尼为阿富汗总统](/articles/reuters/1034512.md)
+
+8-17 [腾讯音乐第二季获利超预期 受订户增加和广告业务提振](/articles/reuters/1034513.md)
+
+8-17 [俄罗斯称阿富汗总统加尼逃离时四辆汽车和一架直升机里装满现金--俄新社](/articles/reuters/1034514.md)
+
+8-17 [海地医院爆满医师奋力救伤患 地震丧生者已逾1,400](/articles/reuters/1034515.md)
+
+8-17 [腾讯音乐CEO表示完全接受中国监管机构的政策](/articles/reuters/1034516.md)
+
+8-17 [友邦保险上半年新业务价值跳增并提高中期派息 因业务从疫情中恢复](/articles/reuters/1034517.md)
+
 8-17 [美元和日圆上涨 因中国公布疲弱数据及阿富汗政治紧张局势](/articles/reuters/1034518.md)
 
 8-17 [美股标普500和道指再创新高 因投资者转投防御类股](/articles/reuters/1034519.md)
@@ -576,28 +600,4 @@
 8-9 [焦点：中国PPI料继续高位盘旋 货币政策定向宽松为主](/articles/reuters/1034804.md)
 
 8-9 [阿里巴巴火速通报：辞退涉嫌性侵男员工且“永不录用” 两高管引咎辞职](/articles/reuters/1034805.md)
-
-8-9 [美国黑人失业率下降 但背后的原因令人不安](/articles/reuters/1034806.md)
-
-8-9 [钠离子电池不会动摇电池产业对锂等金属的需求--矿业公司](/articles/reuters/1034807.md)
-
-8-9 [美国拜登政府正在研究公司强制员工接种疫苗的权限](/articles/reuters/1034808.md)
-
-8-9 [网易云音乐在香港的10亿美元IPO推迟--消息人士](/articles/reuters/1034809.md)
-
-8-9 [沪综指早盘收升1% 传统蓝筹大涨新能源股领跌](/articles/reuters/1034810.md)
-
-8-9 [特朗普的新挑战：募得的9,000万美元怎么花？](/articles/reuters/1034811.md)
-
-8-9 [美国纽约州长库莫性骚扰丑闻缠身 其高级助手辞职](/articles/reuters/1034812.md)
-
-8-9 [亚股下滑人气不稳 黄金和石油下挫](/articles/reuters/1034813.md)
-
-8-9 [《图表新闻》五大主题：警惕美国CPI数据引发夏日风暴](/articles/reuters/1034814.md)
-
-8-9 [即时观点：中国7月CPI同比涨1% PPI再升至9%生产资料价格涨势令人忧](/articles/reuters/1034815.md)
-
-8-9 [中国7月CPI同比涨1% PPI升9%追平5月所创逾12年半高点](/articles/reuters/1034816.md)
-
-8-9 [欧盟将检讨安全旅行国家名单 可能重新考虑美国地位--消息人士](/articles/reuters/1034817.md)
 
