--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+8-17 [亚股下跌 投资者关注新冠病例上升和阿富汗危机](/articles/reuters/1034505.md)
+
 8-17 [多家知名对冲基金走霉运 在滴滴被查前大量入股--美国文件](/articles/reuters/1034506.md)
 
 8-17 [6月外资持有美债创去年2月来最高 但中国继续减持美国公债](/articles/reuters/1034507.md)
@@ -598,6 +600,4 @@
 8-9 [足球巨星梅西挥泪告别巴萨 证实与巴黎圣日耳曼商讨转会](/articles/reuters/1034803.md)
 
 8-9 [焦点：中国PPI料继续高位盘旋 货币政策定向宽松为主](/articles/reuters/1034804.md)
-
-8-9 [阿里巴巴火速通报：辞退涉嫌性侵男员工且“永不录用” 两高管引咎辞职](/articles/reuters/1034805.md)
 
