--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-17 [管控互联网企业 中国立法禁止网络不正当竞争](/articles/dw/1040806.md)
+
+8-17 [德语媒体：中国人幸灾乐祸](/articles/dw/1040807.md)
+
+8-17 [灰烬之中的昔日希腊天堂](/articles/dw/1040808.md)
+
 8-17 [新西兰：新增一个病例 全国封锁三天](/articles/dw/1040809.md)
 
 8-17 [德国第一架军机仅载7人离开 塔利班: 本国人不应离境](/articles/dw/1040810.md)
@@ -594,10 +600,4 @@
 8-1 [新冠疫情挡不住 大众汽车盈利创纪录](/articles/dw/1041104.md)
 
 8-1 [IPhone助苹果业务火爆](/articles/dw/1041105.md)
-
-8-1 [应对邻国威胁 印度展开军区体制改革](/articles/dw/1041106.md)
-
-8-1 [韩国央行：朝鲜2020年GDP大幅下滑](/articles/dw/1041107.md)
-
-8-1 [奥运超级粉丝滝岛一统](/articles/dw/1041108.md)
 
