--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+8-19 [阿富汗政局“变天”，中国与塔利班的关系还需时间验证 - 观察中国](/articles/rfi/1024765.md)
+
+8-19 [李宇轩承认串谋勾结境外势力危害国安罪 控方指黎智英为主谋](/articles/rfi/1024766.md)
+
+8-19 [人道支持反修例人士基金被迫停运 有受惠者忧后来者有寃无路诉](/articles/rfi/1024767.md)
+
+8-19 [影星妮歌洁曼获豁免检疫来港拍摄 被揭疑未按规定活动](/articles/rfi/1024768.md)
+
+8-19 [塔利班如何应对缺钱困境？或靠毒品收入](/articles/rfi/1024769.md)
+
 8-19 [中国官媒指多位专家倡适时开征财产税](/articles/rfi/1024770.md)
 
 8-19 [彭博社：阿富汗的加尼如何从总统变成躲藏的“小人”](/articles/rfi/1024771.md)
@@ -590,14 +600,4 @@
 8-10 [中国怒怼立陶宛欲设台湾办事处 官方学者威胁不排除断交 立陶宛只回应遗憾](/articles/rfi/1025063.md)
 
 8-10 [埃塞俄比亚总理阿比·艾哈迈德周二发出总动员令](/articles/rfi/1025064.md)
-
-8-10 [山东号航母大阵势南海军演称显示对抗美国及其盟国挑战](/articles/rfi/1025065.md)
-
-8-10 [塔利班要全部拿下阿富汗 美国寻求谈判停火](/articles/rfi/1025066.md)
-
-8-10 [官媒和港府针对11日后 全港最大工会「教协」突解散 称看不到前景](/articles/rfi/1025067.md)
-
-8-10 [德尔塔病毒挑战中国零感染战略 - 柏林飞鸿](/articles/rfi/1025068.md)
-
-8-10 [灌女员工喝白酒 阿里巴巴开除被指控涉案高管](/articles/rfi/1025069.md)
 
