--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+8-20 [前美国国务卿赖斯：“美国应该再给阿富汗一些时间。” - 要闻分析](/articles/rfi/1024749.md)
+
 8-20 [普京，马克龙，德拉吉共商阿富汗局势](/articles/rfi/1024750.md)
 
 8-20 [威胁国会山里有炸弹的男人向警方自首](/articles/rfi/1024751.md)
@@ -598,6 +600,4 @@
 8-11 [中国可能即将对加拿大商人斯帕弗作出判决](/articles/rfi/1025047.md)
 
 8-11 [美国在联合国就南海问题对中国提出谴责](/articles/rfi/1025048.md)
-
-8-11 [梅西：   两年合同已签   球衣30号](/articles/rfi/1025049.md)
 
