--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+8-20 [王毅谈阿富汗：要多鼓励，不要施加更多压力](/articles/rfi/1024745.md)
+
+8-20 [即便不满，法国市长是否有权拒绝接收阿富汗难民？](/articles/rfi/1024746.md)
+
+8-20 [法国提出承认新一代塔利班政权的5大前提](/articles/rfi/1024747.md)
+
+8-20 [拜登民调跌破50%，CNN称阿富汗撤军正受严格审视](/articles/rfi/1024748.md)
+
 8-20 [前美国国务卿赖斯：“美国应该再给阿富汗一些时间。” - 要闻分析](/articles/rfi/1024749.md)
 
 8-20 [普京，马克龙，德拉吉共商阿富汗局势](/articles/rfi/1024750.md)
@@ -592,12 +600,4 @@
 8-11 [中国协议资助缅甸军政府发展项目](/articles/rfi/1025043.md)
 
 8-11 [教协解散：学者忧起骨牌效应 香港左媒续抨击和追责](/articles/rfi/1025044.md)
-
-8-11 [谢伦伯格死刑案：欧盟呼吁宽大处理 中国驳斥肆意干涉](/articles/rfi/1025045.md)
-
-8-11 [中国：斯帕弗遭控间谍罪和窃取国家机密罪获刑11年](/articles/rfi/1025046.md)
-
-8-11 [中国可能即将对加拿大商人斯帕弗作出判决](/articles/rfi/1025047.md)
-
-8-11 [美国在联合国就南海问题对中国提出谴责](/articles/rfi/1025048.md)
 
