--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-20 [英特尔公开与台积电合作细节  以5奈米生产绘图芯片](/articles/dw/1040762.md)
+
+8-20 [塔利班射杀德国之声记者家人 多家德媒吁柏林协助](/articles/dw/1040763.md)
+
+8-20 [美国副总统将访东南亚 寻求支持抗衡中国](/articles/dw/1040764.md)
+
 8-20 [阿富汗现塔利班抗议潮 欧盟忧中俄掌控局势](/articles/dw/1040765.md)
 
 8-20 [英特尔公开与台积电合作细节  以5奈米生产绘图晶片](/articles/dw/1040766.md)
@@ -594,10 +600,4 @@
 8-3 [巴伐利亚号远航引争议 网民：我们的军舰去亚洲做什么？](/articles/dw/1041060.md)
 
 8-3 [东京奥运：中国女排无缘8强  传奇教练郎平谢幕](/articles/dw/1041061.md)
-
-8-3 [中国运动员领奖戴毛像章  国际奥委会着手调查](/articles/dw/1041062.md)
-
-8-3 [政府官员洪灾中过失杀人?德国检察院考虑调查](/articles/dw/1041063.md)
-
-8-3 [对抗新冠  人体需有多少抗体？](/articles/dw/1041064.md)
 
