--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+8-21 [拜登：无法保证阿富汗空中撤离的最终结果，没有看到盟国们对美国信誉发出质疑](/articles/rfi/1024716.md)
+
+8-21 [针对中国基建工人的巴基斯坦自杀式袭击造成两儿童死亡](/articles/rfi/1024717.md)
+
+8-21 [新冠哪里来？下场疫病会是什么？世卫成立国际咨询组，呼吁实验室安全专家，兽医学家等参加](/articles/rfi/1024718.md)
+
 8-21 [欧洲龙脉宝藏地：最法式的意大利味道 - 法国美食](/articles/rfi/1024719.md)
 
 8-21 [美国和俄罗斯对朝鲜政策首席代表将于21日相继访问韩国](/articles/rfi/1024720.md)
@@ -594,10 +600,4 @@
 8-12 [美情报官员：塔利班可能90天内攻陷喀布尔](/articles/rfi/1025014.md)
 
 8-12 [国会大选前   德基民盟（CDU）党魁阿明·拉舍特民意大跌](/articles/rfi/1025015.md)
-
-8-12 [传朝鲜不满美韩联合军演 &quot;朝韩热线&quot;重启2周后再度中断](/articles/rfi/1025016.md)
-
-8-12 [习近平思想读本进入中小学成必修课教材](/articles/rfi/1025017.md)
-
-8-12 [Covid-19:塞内加尔校服预算埋下分歧](/articles/rfi/1025018.md)
 
