--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+8-21 [塔利班复仇名单上的狩猎重点：军，警，情报人员，与美国北约合作过的阿富汗人](/articles/rfi/1024714.md)
+
+8-21 [北约外长会警告塔利班别让阿富汗再成恐怖温床 - 要闻分析](/articles/rfi/1024715.md)
+
 8-21 [拜登：无法保证阿富汗空中撤离的最终结果，没有看到盟国们对美国信誉发出质疑](/articles/rfi/1024716.md)
 
 8-21 [针对中国基建工人的巴基斯坦自杀式袭击造成两儿童死亡](/articles/rfi/1024717.md)
@@ -596,8 +600,4 @@
 8-12 [联合国维和力量特遣兵增援刚果(金)](/articles/rfi/1025012.md)
 
 8-12 [加拿大公民被判11年 布林肯要求中方立即无条件释放](/articles/rfi/1025013.md)
-
-8-12 [美情报官员：塔利班可能90天内攻陷喀布尔](/articles/rfi/1025014.md)
-
-8-12 [国会大选前   德基民盟（CDU）党魁阿明·拉舍特民意大跌](/articles/rfi/1025015.md)
 
