--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+8-22 [阿富汗难民何去何从？ - 要闻解说](/articles/rfi/1024667.md)
+
+8-22 [非洲萨赫勒地区感受喀布尔沦陷冲击波 - 聚焦非洲](/articles/rfi/1024668.md)
+
+8-22 [东京残奥会相关新冠阳性者达138人](/articles/rfi/1024669.md)
+
+8-22 [哈里斯访新越  学者呼吁和为贵 - 曼谷专栏](/articles/rfi/1024670.md)
+
 8-22 [默克尔今访乌克兰 柏林与基辅信任感跌](/articles/rfi/1024671.md)
 
 8-22 [美国力挺立陶宛升级 布林肯致电蓝斯柏吉斯](/articles/rfi/1024672.md)
@@ -592,12 +600,4 @@
 8-13 [日本两大臣参拜靖国神社](/articles/rfi/1024965.md)
 
 8-13 [新香港选举：选委会64%组别成「等额选举」 民主派几近绝迹](/articles/rfi/1024966.md)
-
-8-13 [民阵今商解散 警务处长指民阵举办部分游行涉违国安法 不排除续检控](/articles/rfi/1024967.md)
-
-8-13 [离港人数按年升逾3倍 總人口跌1.2% 学者料移民潮将持续多一至两年](/articles/rfi/1024968.md)
-
-8-13 [立陶宛与台湾关系特殊 北京要惩罚立陶宛 - 法国世界报](/articles/rfi/1024969.md)
-
-8-13 [美国财长耶伦正考虑访问中国，或将讨论取消加征中国商品关税](/articles/rfi/1024970.md)
 
