--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+8-23 [历史性一周：阿富汗变天 中国人吵翻天 - 要闻分析](/articles/rfi/1024648.md)
+
+8-23 [面对数万支持者 特朗普痛批拜登撤离阿富汗方式是美国史上“最大外交政策耻辱”](/articles/rfi/1024649.md)
+
+8-23 [日本东京夏季残疾人奥运会开幕在即](/articles/rfi/1024650.md)
+
+8-23 [刚果(金):南基伍暂停多家中国矿企](/articles/rfi/1024651.md)
+
+8-23 [盟国请求下，拜登为延期撤离阿富汗留一丝余地，但指出不存在无痛撤离](/articles/rfi/1024652.md)
+
 8-23 [投身二战的美国明星：法国宣布第一位黑人女性迁葬先贤祠](/articles/rfi/1024653.md)
 
 8-23 [马里想重新成为非洲棉花最大生产国](/articles/rfi/1024654.md)
@@ -590,14 +600,4 @@
 8-14 [加拿大承诺接收2万名弱势阿富汗难民 如妇女领袖等](/articles/rfi/1024946.md)
 
 8-14 [印外交部：巴外长就中国人员遇袭事件的指控是谎言](/articles/rfi/1024947.md)
-
-8-14 [美国驻阿富汗大使馆通知工作人员销毁敏感物件](/articles/rfi/1024948.md)
-
-8-14 [拒续延签证 俄罗斯变相驱逐BBC记者](/articles/rfi/1024949.md)
-
-8-14 [法国:马提尼克岛上医院因Covid爆满](/articles/rfi/1024950.md)
-
-8-14 [美国国防部：派往阿富汗支持撤离的美军中的大部分将在本周日晚之前抵达喀布尔，西方国家纷纷撤离人员](/articles/rfi/1024951.md)
-
-8-14 [肯尼亚未接种Covid疫苗公务员有压力](/articles/rfi/1024952.md)
 
