--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+8-24 [德国《商报》：西方在阿富汗失败了 - 柏林飞鸿](/articles/rfi/1024610.md)
+
+8-24 [七国集团视频峰会紧急商讨阿富汗危机](/articles/rfi/1024611.md)
+
+8-24 [法国记者新书：中国政权如何冷酷地背叛世界 - 法国报纸摘要](/articles/rfi/1024612.md)
+
+8-24 [塔利班任命新的阿富汗中央银行行长 - 今日经济](/articles/rfi/1024613.md)
+
 8-24 [东京残奥会开幕式24日举行](/articles/rfi/1024614.md)
 
 8-24 [支联会传常委会以一票之差通过解散 有待特别会员大会通过](/articles/rfi/1024615.md)
@@ -592,12 +600,4 @@
 8-15 [塔利班从四面八方进入首都喀布尔 妇女被要求躲避](/articles/rfi/1024908.md)
 
 8-15 [今年“8·15” 日本首相不提“加害” 三大臣参拜靖国神社](/articles/rfi/1024909.md)
-
-8-15 [著名维权律师高智晟失踪4年 高妻：活要见人，死要见尸](/articles/rfi/1024910.md)
-
-8-15 [台前防长称曾授权空军司令“共机扰台危急时发动第一击”](/articles/rfi/1024911.md)
-
-8-15 [美国媒体报道若塔利班攻占喀布尔北京将率先承认神学士政权](/articles/rfi/1024912.md)
-
-8-15 [“端点星”案宣判：两志愿者预计将于15日获释](/articles/rfi/1024913.md)
 
