--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-24 [德语媒体：中国抢走了德国的欧洲市场](/articles/dw/1040682.md)
+
+8-24 [德国新任驻华大使贺岩（Jan Hecker）正式上任](/articles/dw/1040683.md)
+
 8-24 [乌克兰庆祝独立三十周年  敦促俄交还克里米亚](/articles/dw/1040684.md)
 
 8-24 [叙利亚难民出战东京残奥](/articles/dw/1040685.md)
@@ -596,8 +600,4 @@
 8-7 [疫苗接种 王牌在手？](/articles/dw/1040980.md)
 
 8-7 [希腊、土耳其野火持续延烧](/articles/dw/1040981.md)
-
-8-7 [中国7月出口仍然强劲 德尔塔病毒或成阻力](/articles/dw/1040982.md)
-
-8-7 [人权组织：北京奥运过后 人权并未改善](/articles/dw/1040983.md)
 
