--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+8-25 [核心业务被叫停 中国教培机构纷纷寻找新的赚钱之道](/articles/reuters/1034209.md)
+
 8-25 [塔利班统治来临 国际救援机构在道德与金援之间陷入纠结](/articles/reuters/1034210.md)
 
 8-25 [俄罗斯总统普京称俄罗斯不会在阿富汗部署武装力量](/articles/reuters/1034211.md)
@@ -598,6 +600,4 @@
 8-17 [6月外资持有美债创去年2月来最高 但中国继续减持美国公债](/articles/reuters/1034507.md)
 
 8-17 [焦点：OPEC+认为没有必要满足美国的增产要求--消息人士](/articles/reuters/1034508.md)
-
-8-17 [中国政府已持有北京字节跳动1%股份 并有权任命一名董事--The Information](/articles/reuters/1034509.md)
 
