--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+8-27 [美元从一周低点跳涨 受美联储官员缩减购债言论刺激](/articles/reuters/1034118.md)
+
+8-27 [美股三大股指齐收低 因担忧阿富汗局势和美联储可能的政策转变](/articles/reuters/1034119.md)
+
+8-27 [油价结束三连涨收低 因新冠病例激增和墨西哥恢复部分供应](/articles/reuters/1034120.md)
+
+8-27 [金价企稳 投资者将目光锁定在杰克森霍尔研讨会](/articles/reuters/1034121.md)
+
+8-27 [路透测算的人民币中间价料开在6.4849元附近 较上日贬119点](/articles/reuters/1034122.md)
+
 8-26 [分析：中国当局出拳调控房地产业 信贷市场胆颤心惊](/articles/reuters/1034123.md)
 
 8-26 [焦点：鲍威尔面临沟通挑战 料不会暗示缩减购债时间表](/articles/reuters/1034124.md)
@@ -590,14 +600,4 @@
 8-19 [IMF暂停阿富汗获得特别提款权的途径 因阿富汗政府情况不明确](/articles/reuters/1034416.md)
 
 8-19 [美国总统拜登称8月31日的阿富汗撤军最后期限可能需要延后](/articles/reuters/1034417.md)
-
-8-19 [美国将限制部分中国赴美航班以40%的客座率运行四周--运输部](/articles/reuters/1034418.md)
-
-8-19 [独家：芯片制造商格芯秘密申请在美国IPO--消息人士](/articles/reuters/1034419.md)
-
-8-19 [华为孟晚舟的引渡听证会结束 法官将在10月21日宣布裁决日期](/articles/reuters/1034420.md)
-
-8-19 [中国长城汽车通过收购戴姆勒一家工厂 进入巴西汽车市场](/articles/reuters/1034421.md)
-
-8-19 [美元在美联储会议记录发布后从四个半月高位回落 日内基本持平](/articles/reuters/1034422.md)
 
