--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,30 @@
 路透
 ------
 
+8-27 [沪综指早盘略微低开 投资者关注经济数据](/articles/reuters/1034106.md)
+
+8-27 [独家：微软警告数千云计算客户 称数据库存严重安全漏洞--邮件](/articles/reuters/1034107.md)
+
+8-27 [小鹏汽车二季度营收大增但净亏损扩大 高管称数据安全监管有利行业发展（更新版）](/articles/reuters/1034108.md)
+
+8-27 [投资者想从鲍威尔的杰克森霍尔演讲里得到哪些答案？](/articles/reuters/1034109.md)
+
+8-27 [分析：杰克森霍尔会议即将登场 投资者对缩减暗示期待不高](/articles/reuters/1034110.md)
+
+8-27 [喀布尔机场爆炸致美军伤亡后 五角大楼准备应对更多攻击](/articles/reuters/1034111.md)
+
+8-27 [综述：鲍威尔重要讲话在即 美联储鹰派官员敦促尽快开始缩减购债](/articles/reuters/1034112.md)
+
+8-27 [焦点：美军在阿富汗的伤亡 将成为拜登挥之不去的噩梦](/articles/reuters/1034113.md)
+
+8-27 [WHO计划在9月底前通过COVAX发放1亿剂科兴和国药疫苗 为首次发放中国疫苗](/articles/reuters/1034114.md)
+
+8-27 [白宫称让所有想离开的阿富汗人都撤离是不可能的](/articles/reuters/1034115.md)
+
+8-27 [调查：中国房地产调控料保持高压 楼市最大风险在于信贷环境过快收紧](/articles/reuters/1034116.md)
+
+8-27 [综述：喀布尔机场外发生自杀炸弹攻击 至少13名美军和数十平民死亡](/articles/reuters/1034117.md)
+
 8-27 [美元从一周低点跳涨 受美联储官员缩减购债言论刺激](/articles/reuters/1034118.md)
 
 8-27 [美股三大股指齐收低 因担忧阿富汗局势和美联储可能的政策转变](/articles/reuters/1034119.md)
@@ -576,28 +600,4 @@
 8-19 [英国法院批准针对万事达卡的规模140多亿美元集体诉讼](/articles/reuters/1034404.md)
 
 8-19 [亚股下跌而美元上涨 FED会议记录提升年内缩减刺激概率](/articles/reuters/1034405.md)
-
-8-19 [Facebook表态可能不会松绑塔利班禁令 即使美国政府政策软化](/articles/reuters/1034406.md)
-
-8-19 [上海将加快新能源汽车发展 与宁德时代签约推进创新中心等多项目落地](/articles/reuters/1034407.md)
-
-8-19 [腾讯将投入500亿元人民币助力共同富裕 中央财经委会议后快速响应](/articles/reuters/1034408.md)
-
-8-19 [综述：猪肉加工巨头万洲父子内斗 “废太子”一通笔伐逾百亿市值蒸发](/articles/reuters/1034409.md)
-
-8-19 [腾讯料中国对互联网行业将出台更多规管 教育行业监管将拖低广告收入增长](/articles/reuters/1034410.md)
-
-8-19 [综述：美国7月房屋开工降幅超预期 建筑成本和房价急升继续制约楼市](/articles/reuters/1034411.md)
-
-8-19 [英伟达第三季营收料超华尔街预期 但收购安谋的谈判耗时亦超预期](/articles/reuters/1034412.md)
-
-8-19 [综述：阿富汗抗议活动三人遇害 塔利班和平统治承诺受到考验](/articles/reuters/1034413.md)
-
-8-19 [沪综指早盘低开 有色采掘板块领跌](/articles/reuters/1034414.md)
-
-8-19 [中国二季度信托规模超20万亿且为资管新规后环比首增 投资类规模同比增45%](/articles/reuters/1034415.md)
-
-8-19 [IMF暂停阿富汗获得特别提款权的途径 因阿富汗政府情况不明确](/articles/reuters/1034416.md)
-
-8-19 [美国总统拜登称8月31日的阿富汗撤军最后期限可能需要延后](/articles/reuters/1034417.md)
 
