--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-27 [谁是20年阿富汗战争真正的胜利者？](/articles/nyt/1046363.md)
+
 8-27 [简报：喀布尔机场遭自杀式爆炸袭击；中国的新一代黑客](/articles/nyt/1046364.md)
 
 8-26 [纳瓦尔尼狱中首次专访：俄罗斯监狱像“中国劳改营”](/articles/nyt/1046365.md)
@@ -598,6 +600,4 @@
 6-30 [在Nobu Malibu，与名人共度梦幻时光](/articles/nyt/1046661.md)
 
 6-30 [“红海”正在淹没香港](/articles/nyt/1046662.md)
-
-6-30 [“消瘦”的金正恩：减肥还是健康堪忧？](/articles/nyt/1046663.md)
 
