--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+8-27 [互不信任加剧 中国拟禁止有数据安全风险科技公司境外上市](/articles/dw/1040620.md)
+
+8-27 [阿富汗国内恐怖：谁是IS-K？](/articles/dw/1040621.md)
+
+8-27 [联合国预计将有超过50万难民逃离阿富汗](/articles/dw/1040622.md)
+
+8-27 [德语媒体：打造抗中联盟谈何容易](/articles/dw/1040623.md)
+
 8-27 [德军驻扎阿富汗的这20年](/articles/dw/1040624.md)
 
 8-27 [柴可夫斯基：西班牙舞曲](/articles/dw/1040625.md)
@@ -592,12 +600,4 @@
 8-11 [加拿大商人被判11年 特鲁多称绝对无法接受](/articles/dw/1040918.md)
 
 8-11 [人权观察：柬埔寨一带一路水坝造成「人权灾难」](/articles/dw/1040919.md)
-
-8-11 [立陶宛与中国起摩擦   环球时报：不排除断交可能](/articles/dw/1040920.md)
-
-8-11 [台湾控中国施压威尼斯影展 称其「中华台北」](/articles/dw/1040921.md)
-
-8-11 [中国法院判加拿大商人11年 并驱逐出境](/articles/dw/1040922.md)
-
-8-11 [中国官媒引述学者称美国恐吓  瑞士：查无此人](/articles/dw/1040923.md)
 
