--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+8-28 [法媒：美国的阿富汗泥淖 拜登的责任 - 法国报纸摘要](/articles/rfi/1024470.md)
+
+8-28 [中国军人将赴俄参加上合组织反恐军演](/articles/rfi/1024471.md)
+
 8-28 [拜登政府卖华为亿元汽车芯片 不理批评](/articles/rfi/1024472.md)
 
 8-28 [美国两艘军舰过台湾海峡 中国军队东海反击即推巡航演习](/articles/rfi/1024473.md)
@@ -596,8 +600,4 @@
 8-19 [影星妮歌洁曼获豁免检疫来港拍摄 被揭疑未按规定活动](/articles/rfi/1024768.md)
 
 8-19 [塔利班如何应对缺钱困境？或靠毒品收入](/articles/rfi/1024769.md)
-
-8-19 [中国官媒指多位专家倡适时开征财产税](/articles/rfi/1024770.md)
-
-8-19 [彭博社：阿富汗的加尼如何从总统变成躲藏的“小人”](/articles/rfi/1024771.md)
 
