--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+8-28 [传家中烧纸祭拜亡妻引书籍失火 前财长金人庆不治](/articles/rfi/1024469.md)
+
 8-28 [法媒：美国的阿富汗泥淖 拜登的责任 - 法国报纸摘要](/articles/rfi/1024470.md)
 
 8-28 [中国军人将赴俄参加上合组织反恐军演](/articles/rfi/1024471.md)
@@ -598,6 +600,4 @@
 8-19 [人道支持反修例人士基金被迫停运 有受惠者忧后来者有寃无路诉](/articles/rfi/1024767.md)
 
 8-19 [影星妮歌洁曼获豁免检疫来港拍摄 被揭疑未按规定活动](/articles/rfi/1024768.md)
-
-8-19 [塔利班如何应对缺钱困境？或靠毒品收入](/articles/rfi/1024769.md)
 
