--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,22 @@
 法广
 ------
 
+8-29 [伊朗最高领袖批评 拜登核协议要求跟特朗普一样](/articles/rfi/1024450.md)
+
+8-29 [飓风艾达逼近美国南岸 新奥尔良展开大规模疏散](/articles/rfi/1024451.md)
+
+8-29 [阿富汗女市长逃亡抵达德国](/articles/rfi/1024452.md)
+
+8-29 [西方国家撤离行动一团乱  阿富汗民众感觉被抛弃](/articles/rfi/1024453.md)
+
+8-29 [美发动无人机攻击 击毙2名备受瞩目伊斯兰国成员](/articles/rfi/1024454.md)
+
+8-29 [美国气候特使克里再次访华](/articles/rfi/1024455.md)
+
+8-29 [喀布尔机场遇袭 拜登：未来24到36小时可能再发生](/articles/rfi/1024456.md)
+
+8-29 [南非:一女公务员因揭Covid腐败被杀](/articles/rfi/1024457.md)
+
 8-29 [法国残奥委会女主席东京赛场赢银牌](/articles/rfi/1024458.md)
 
 8-28 [喀布尔机场爆炸案 查不出自杀式袭击如何闯关 危险仍在](/articles/rfi/1024459.md)
@@ -584,20 +600,4 @@
 8-20 [拜登民调跌破50%，CNN称阿富汗撤军正受严格审视](/articles/rfi/1024748.md)
 
 8-20 [前美国国务卿赖斯：“美国应该再给阿富汗一些时间。” - 要闻分析](/articles/rfi/1024749.md)
-
-8-20 [普京，马克龙，德拉吉共商阿富汗局势](/articles/rfi/1024750.md)
-
-8-20 [威胁国会山里有炸弹的男人向警方自首](/articles/rfi/1024751.md)
-
-8-20 [球星马拉多纳身后事：两女儿否认骚扰亡父律师](/articles/rfi/1024752.md)
-
-8-20 [美国总统拜登：台湾若遭入侵 美国会回应](/articles/rfi/1024753.md)
-
-8-20 [法国珍珠宝镇夏慕尼：国际高端消费者缺位对疫后旅游业复苏的影响 - 法国风光](/articles/rfi/1024754.md)
-
-8-20 [阿富汗女记者发视频求救 指控塔利班已经禁止她工作](/articles/rfi/1024755.md)
-
-8-19 [中国今天庆祝入藏70年](/articles/rfi/1024756.md)
-
-8-19 [李克强视察河南水灾 或“被纳凉”传党媒都不报](/articles/rfi/1024757.md)
 
