--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+8-31 [联合国安理会要求塔利班让阿富汗人安全撤离](/articles/voa/1038543.md)
+
+8-31 [拜登总统关于新冠病毒溯源调查的声明暨国家情报总监办公室解密要点(全文翻译)](/articles/voa/1038544.md)
+
+8-31 [援助机构在阿富汗适应新环境](/articles/voa/1038545.md)
+
+8-31 [美国悬赏多达5百万美元缉拿走私芬太尼的中国公民](/articles/voa/1038546.md)
+
+8-31 [塔利班称美国在阿富汗的军事存在结束了](/articles/voa/1038547.md)
+
 8-31 [阿富汗权力更迭被视为是印度的战略挫败](/articles/voa/1038548.md)
 
 8-31 [美国誓言把阿富汗撤离行动进行到“最后”](/articles/voa/1038549.md)
@@ -590,14 +600,4 @@
 8-17 [阿富汗变天之际，布林肯与中俄外长讨论阿富汗局势](/articles/voa/1038841.md)
 
 8-17 [华为涉嫌盗密并在巴基斯坦安全系统中设后门被美企告上联邦法院](/articles/voa/1038842.md)
-
-8-17 [火眼发现中国黑客冒充伊朗人对以色列发动网络攻击](/articles/voa/1038843.md)
-
-8-17 [赞比亚下任总统的支持者在首都庆祝](/articles/voa/1038844.md)
-
-8-17 [美国军队在阿富汗帮助紧急转移人员](/articles/voa/1038845.md)
-
-8-17 [时事大家谈: 国际溯毒源压力日增，北京搅混水屡遭打脸？](/articles/voa/1038846.md)
-
-8-17 [美国海关截获3000多张来自中国的假疫苗接种卡](/articles/voa/1038847.md)
 
