--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-31 [中国限制未成年人玩网路游戏  企业：严格遵守](/articles/dw/1040572.md)
+
+8-31 [美称完成阿富汗撤军 安理会通过阿富汗决议案](/articles/dw/1040573.md)
+
 8-30 [「大中华区」代理侵犯台湾权益？专家：市场因素大过政治考量](/articles/dw/1040574.md)
 
 8-30 [时尚偶像阿普费尔百岁华诞](/articles/dw/1040575.md)
@@ -596,8 +600,4 @@
 8-14 [香港民阵传言解散  警方称继续搜集检控证据](/articles/dw/1040870.md)
 
 8-13 [联合国：阿富汗面临“人道主义灾难”](/articles/dw/1040871.md)
-
-8-13 [日本官员参拜靖国神社惹怒中韩](/articles/dw/1040872.md)
-
-8-13 [德语媒体：有了自信 欧洲就不用选边站](/articles/dw/1040873.md)
 
