--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+8-31 [中国政府能让人民幸福吗？ - 北美来鸿](/articles/rfi/1024364.md)
+
+8-31 [疫情冲击 中国制造业显18个月新低](/articles/rfi/1024365.md)
+
 8-31 [美国网球公开赛首轮两名人胜负不开心](/articles/rfi/1024366.md)
 
 8-31 [美国今暂停在喀布尔使馆运作 外交事务移至卡塔尔](/articles/rfi/1024367.md)
@@ -596,8 +600,4 @@
 8-22 [阿富汗喀布尔机场局势混乱 塔利班指控美国应负责](/articles/rfi/1024662.md)
 
 8-22 [浙江官场大地震 传官员投案或揭发 与蚂蚁上市涉案深](/articles/rfi/1024663.md)
-
-8-22 [香港实施反制裁法或采豁免特定跨国企业](/articles/rfi/1024664.md)
-
-8-22 [法国到底要怎么处理阿富汗移民问题？ - 法国报纸摘要](/articles/rfi/1024665.md)
 
