--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-31 [欧盟实现疫苗接种里程碑 世卫却发出严厉警告](/articles/dw/1040558.md)
+
+8-31 [日本防卫省申请破纪录的国防预算](/articles/dw/1040559.md)
+
 8-31 [飓风“艾达”肆虐美国南部](/articles/dw/1040560.md)
 
 8-31 [“运动”要来了？中国众官媒转发“变革檄文”](/articles/dw/1040561.md)
@@ -596,8 +600,4 @@
 8-15 [不为人知的新冠死亡数字](/articles/dw/1040856.md)
 
 8-15 [德国使馆推文伤害了部分日本国民自尊心](/articles/dw/1040857.md)
-
-8-15 [欧洲大火肆虐：四大问题解疑](/articles/dw/1040858.md)
-
-8-15 [气候变化迫在眉睫 与德国经济有何干？](/articles/dw/1040859.md)
 
