--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+9-2 [广州二手房 “指导价”比市价低三成  市场忧虑出现局部性崩盘](/articles/rfa/1044646.md)
+
+9-2 [流亡藏人出书揭藏人被逼签《十七条协议》真相   警示台湾](/articles/rfa/1044647.md)
+
 9-2 [5部门约谈美团出行11家网约车企   分析指为国有化作准备](/articles/rfa/1044648.md)
 
 9-2 [习近平谈“不斗争不切实际” 分析指维护连任为首要目标](/articles/rfa/1044649.md)
@@ -596,8 +600,4 @@
 7-29 [A股两天蒸发4万亿市值   官媒急发文安抚难阻外资抛售](/articles/rfa/1044944.md)
 
 7-29 [中国严查教师有偿补课    被批违背市场机制](/articles/rfa/1044945.md)
-
-7-29 [孙大午遭重判18年 最后陈述为民企喊话习近平](/articles/rfa/1044946.md)
-
-7-29 [新疆莎车暴力事件七周年 世维会谴责中国谎言连篇](/articles/rfa/1044947.md)
 
