--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+9-3 [亚股守住涨幅 美国非农就业报告公布前美元疲软](/articles/reuters/1033827.md)
+
+9-3 [调查：美联储缩减购债日益逼近 新兴市场货币前路坎坷](/articles/reuters/1033828.md)
+
+9-3 [分析师观点：时隔卅余载资本市场迎新北京证交所 新三板改革步入新阶段](/articles/reuters/1033829.md)
+
+9-3 [中国8月服务业PMI跌至46.7创16个月新低 综合PMI降至17个月低点--财新](/articles/reuters/1033830.md)
+
 9-3 [综述：美元方向不明 待美联储指点迷津--路透调查](/articles/reuters/1033831.md)
 
 9-3 [中国驻美使馆：“美国芬太尼主要来自中国”不实 未发现列管化学品流至墨西哥](/articles/reuters/1033832.md)
@@ -592,12 +600,4 @@
 8-26 [广东省政府对是否成立恒大债权人委员会 征询主要债权银行意见--REDD](/articles/reuters/1034125.md)
 
 8-26 [载有阿富汗撤离人员的军机抵达韩国](/articles/reuters/1034126.md)
-
-8-26 [受华夏幸福拖累中国平安上半年净利同比降15.5% 拟斥50-100亿实施A股回购](/articles/reuters/1034127.md)
-
-8-26 [京东就收购中国物流资产的控股权进行深入谈判--彭博新闻](/articles/reuters/1034128.md)
-
-8-26 [中国小鹏汽车二季度营收同比增逾五倍 Non-GAAP净亏损扩大至11亿元](/articles/reuters/1034129.md)
-
-8-26 [中国商务部：加大对受疫情影响企业的定向支持 金融机构不应因疫情下调贷款分类](/articles/reuters/1034130.md)
 
