--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+9-3 [中国与塔利班再次相互示好 - 要闻解说](/articles/rfi/1024273.md)
+
+9-3 [中国武力提升台湾积极备战 - 台北一周](/articles/rfi/1024274.md)
+
+9-3 [菅义伟宣布不参加自民党总裁选举并辞去首相](/articles/rfi/1024275.md)
+
 9-3 [中国房地产巨头-恒大集团受到债权人追债](/articles/rfi/1024276.md)
 
 9-3 [巴黎和里昂的美食节 - 法国美食](/articles/rfi/1024277.md)
@@ -594,10 +600,4 @@
 8-25 [阿富汗：俄罗斯也开始撤 第一批撤走500人](/articles/rfi/1024571.md)
 
 8-25 [塔利班谴责西方带走阿富汗精英人才](/articles/rfi/1024572.md)
-
-8-25 [中美“疫苗战”打到了越南](/articles/rfi/1024573.md)
-
-8-25 [担心在阿富汗遭ISIS袭击 拜登决定不延期撤离](/articles/rfi/1024574.md)
-
-8-25 [UTMB环勃朗峰超级越野赛TDS组：捷克跑者夜间遇难，挪威选手夺冠](/articles/rfi/1024575.md)
 
