--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+9-6 [不满女性工作 阿富汗男子在柏林捅伤女园丁](/articles/dw/1040459.md)
+
+9-6 [客座评论：习近平为何要做第三份历史决议](/articles/dw/1040460.md)
+
+9-6 [德国大选是如何进行的？](/articles/dw/1040461.md)
+
 9-6 [采访落空 德国著名小报给绿党候选人留空白版面](/articles/dw/1040462.md)
 
 9-6 [IAA车展开幕在即 “芯片荒”掣肘汽车业复苏](/articles/dw/1040463.md)
@@ -594,10 +600,4 @@
 8-20 [街訪台灣人：今日阿富汗、明日台灣？](/articles/dw/1040757.md)
 
 8-20 [北京意外推迟表决《反外国制裁法》在港实施](/articles/dw/1040758.md)
-
-8-20 [德国新冠疫情进入第四波](/articles/dw/1040759.md)
-
-8-20 [阿富汗女大生：外交官梦想破碎丶年轻世代被西方背叛](/articles/dw/1040760.md)
-
-8-20 [车用芯片短缺困扰美国   美参议员吁台湾多帮忙](/articles/dw/1040761.md)
 
