--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+9-6 [“饭圈整治”扩大到韩娱圈 多个粉丝团被禁言](/articles/dw/1040455.md)
+
+9-6 [3岁男童林地失踪数日 奇迹生还](/articles/dw/1040456.md)
+
+9-6 [德语媒体：名不副实的伙伴关系](/articles/dw/1040457.md)
+
+9-6 [NGO起诉德国5家大企业配合参与新疆强迫劳动](/articles/dw/1040458.md)
+
 9-6 [不满女性工作 阿富汗男子在柏林捅伤女园丁](/articles/dw/1040459.md)
 
 9-6 [客座评论：习近平为何要做第三份历史决议](/articles/dw/1040460.md)
@@ -592,12 +600,4 @@
 8-20 [德语媒体：中国的财富再分配可能是招险棋](/articles/dw/1040753.md)
 
 8-20 [客座评论：塔利班获胜对世界民主的影响](/articles/dw/1040754.md)
-
-8-20 [塔利班的资金从何而来？](/articles/dw/1040755.md)
-
-8-20 [“三次分配”助中国减少贫富差距？](/articles/dw/1040756.md)
-
-8-20 [街訪台灣人：今日阿富汗、明日台灣？](/articles/dw/1040757.md)
-
-8-20 [北京意外推迟表决《反外国制裁法》在港实施](/articles/dw/1040758.md)
 
