--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+9-7 [荆州关公雕像遭逼迁    一拆一建耗资越3亿元](/articles/rfa/1044617.md)
+
 9-7 [两加人被中国拘捕千日  全球各地发起为自由步行活动](/articles/rfa/1044618.md)
 
 9-7 [立陶宛通报中国压力  欧盟外长与欧洲议会团结表达支持](/articles/rfa/1044619.md)
@@ -598,6 +600,4 @@
 8-3 [欧盟谴责澳门取消民主派参选立法会资格 美国表态支持](/articles/rfa/1044915.md)
 
 8-2 [北京清算香港专业团体 　教育、传媒组织成打压对象](/articles/rfa/1044916.md)
-
-8-2 [朱立伦宣布参选国民党主席 提出党面临“五个失去”](/articles/rfa/1044917.md)
 
