--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-7 [古巴开始为幼儿接种新冠疫苗](/articles/dw/1040439.md)
+
+9-7 [德语媒体：默克尔失去了一位不会惹恼北京的战略家](/articles/dw/1040440.md)
+
 9-7 [几内亚军人全面掌权 中方称反对政变夺权](/articles/dw/1040441.md)
 
 9-7 [谋求加入一带一路 塔利班继续向中国示好](/articles/dw/1040442.md)
@@ -596,8 +600,4 @@
 8-22 [海废变黄金：拖鞋也能成为艺术品](/articles/dw/1040737.md)
 
 8-21 [德语媒体：中国经济为何能持续增长?](/articles/dw/1040738.md)
-
-8-21 [香港律师会理事候选人罗彰南宣布退选](/articles/dw/1040739.md)
-
-8-21 [喀布尔机场混乱持续 拜登：属史上最难空中撤离行动](/articles/dw/1040740.md)
 
