--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-7 [从法兰克福到慕尼黑：IAA车展重装上阵](/articles/dw/1040438.md)
+
 9-7 [古巴开始为幼儿接种新冠疫苗](/articles/dw/1040439.md)
 
 9-7 [德语媒体：默克尔失去了一位不会惹恼北京的战略家](/articles/dw/1040440.md)
@@ -598,6 +600,4 @@
 8-22 [七张图看一周大事](/articles/dw/1040736.md)
 
 8-22 [海废变黄金：拖鞋也能成为艺术品](/articles/dw/1040737.md)
-
-8-21 [德语媒体：中国经济为何能持续增长?](/articles/dw/1040738.md)
 
