--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+9-8 [刘鹤提支持民营经济发展  老调重弹](/articles/rfa/1044605.md)
+
+9-8 [中国"深度老龄城市"达149个       15年内经济增长恐仅1%](/articles/rfa/1044606.md)
+
+9-8 [索罗斯：贝莱德投资中国是悲剧性错误](/articles/rfa/1044607.md)
+
 9-8 [四川石渠县藏人仍受打压 八名僧俗藏人被捕](/articles/rfa/1044608.md)
 
 9-8 [中国核武无约束 北约促北京加入核军控谈判](/articles/rfa/1044609.md)
@@ -594,10 +600,4 @@
 8-3 [公民记者周维林因获取境外资金获刑三年半](/articles/rfa/1044903.md)
 
 8-3 [吴亦凡“饭圈”号召救援   官方封杀整顿粉丝文化](/articles/rfa/1044904.md)
-
-8-3 [中方逼国企买国产设备    内卷化被指公然违反国际贸易协议](/articles/rfa/1044905.md)
-
-8-3 [中国被控滥用国际刑警组织通缉流亡维吾尔人](/articles/rfa/1044906.md)
-
-8-3 [寺院遭关闭缘由大起底 宗教中国化确保江山不变色](/articles/rfa/1044907.md)
 
