--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-9 [简报：中国严查“地下”教培活动；塔利班执政面临考验](/articles/nyt/1046308.md)
+
 9-8 [从反恐战争转向对华战争？](/articles/nyt/1046309.md)
 
 9-8 [塔利班成立过渡政府，数名高层位列美恐怖分子名单](/articles/nyt/1046310.md)
@@ -598,6 +600,4 @@
 7-12 [虚拟房地产：一个可以“买到”埃菲尔铁塔的世界](/articles/nyt/1046606.md)
 
 7-12 [中国舰船压力下，菲律宾渔民的“反抗与适应”](/articles/nyt/1046607.md)
-
-7-12 [部分科学家反驳新冠病毒实验室泄漏说](/articles/nyt/1046608.md)
 
