--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+9-9 [9·11恐袭20年：我们“永不忘记”的是什么](/articles/nyt/1046306.md)
+
+9-9 [OnlyFans不是“性工作者”的安全平台，而是皮条客](/articles/nyt/1046307.md)
+
 9-9 [简报：中国严查“地下”教培活动；塔利班执政面临考验](/articles/nyt/1046308.md)
 
 9-8 [从反恐战争转向对华战争？](/articles/nyt/1046309.md)
@@ -596,8 +600,4 @@
 7-12 [亿万富翁布兰森圆梦，太空旅游离我们还有多远？](/articles/nyt/1046604.md)
 
 7-12 [国安法实施后，那些选择离开故土的香港人](/articles/nyt/1046605.md)
-
-7-12 [虚拟房地产：一个可以“买到”埃菲尔铁塔的世界](/articles/nyt/1046606.md)
-
-7-12 [中国舰船压力下，菲律宾渔民的“反抗与适应”](/articles/nyt/1046607.md)
 
