--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+9-9 [电游：北京命令行业 &quot;停止 &quot;寻求盈利](/articles/rfi/1024071.md)
+
+9-9 [朝鲜一年内第三次阅兵未有展示战略武器](/articles/rfi/1024072.md)
+
+9-9 [22国开会聚焦阿富汗](/articles/rfi/1024073.md)
+
+9-9 [中国与英国在天津就气候变化会谈](/articles/rfi/1024074.md)
+
 9-9 [习近平思想究竟是什么？ - 法国报纸摘要](/articles/rfi/1024075.md)
 
 9-9 [海内外很多华人说，这是吹响“二次文革”或文革2.0的号角 - 观察中国](/articles/rfi/1024076.md)
@@ -592,12 +600,4 @@
 8-31 [中国高晓松传被封杀 称与马云跨界渊源](/articles/rfi/1024369.md)
 
 8-31 [中国专家称武汉海鲜市场疫情 可能来自进口冷链](/articles/rfi/1024370.md)
-
-8-31 [拜登政府警告中国私募股权公司收购一家半导体公司对美国国家安全构成风险](/articles/rfi/1024371.md)
-
-8-31 [海外物业来港推售小心 证监会指属集体投资者可能违法](/articles/rfi/1024372.md)
-
-8-31 [全球谷物价格飙升 法国农人受益 - 今日经济](/articles/rfi/1024373.md)
-
-8-31 [美国撤离阿富汗遭指落荒 拜登今天讲话怎么说引聚焦](/articles/rfi/1024374.md)
 
