--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-9 [中国8月PPI升至13年来最高](/articles/dw/1040402.md)
+
 9-9 [朝鲜国庆阅兵 拖拉机亮相](/articles/dw/1040403.md)
 
 9-9 [“阿富汗错过了无法复制的历史机遇”](/articles/dw/1040404.md)
@@ -598,6 +600,4 @@
 8-24 [美讨论延长撤军计划 世卫：阿富汗缺乏物资](/articles/dw/1040700.md)
 
 8-24 [再提南海航行自由  哈里斯访新强调「承诺持久」](/articles/dw/1040701.md)
-
-8-24 [巴赫：小提琴组曲第三号第三乐章](/articles/dw/1040702.md)
 
