--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+9-10 [双向调控乱了套     房地产泡沫要破了？](/articles/rfa/1044581.md)
+
+9-10 [郭泉案一审择期宣判  1226厦门聚会案起诉书曝光](/articles/rfa/1044582.md)
+
 9-10 [共富口号下的祭品？ "加拿大鹅"被批撒谎而遭中国罚款](/articles/rfa/1044583.md)
 
 9-10 [应对中俄恶意网络活动   法防长: 加强安全防御力量](/articles/rfa/1044584.md)
@@ -596,8 +600,4 @@
 8-6 [中国基因研究论文引争议       美科学期刊编委集体辞职](/articles/rfa/1044879.md)
 
 8-6 [英国欧盟向印太地区发展 英国外交部宣布正式成为东盟对话伙伴国](/articles/rfa/1044880.md)
-
-8-6 [四川阿坝藏寺一僧人被捕 另一获刑僧人被释放](/articles/rfa/1044881.md)
-
-8-6 [资深媒体人长平：中国新闻工作者最大本事是政治把关、自我审查](/articles/rfa/1044882.md)
 
