--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-11 [911事件20年后 纽约变成什么样？](/articles/dw/1040368.md)
+
 9-11 [挑战北京底线 台湾争取驻美代表处正名](/articles/dw/1040369.md)
 
 9-11 [港府安排区议员宣誓  首人遭DQ](/articles/dw/1040370.md)
@@ -598,6 +600,4 @@
 8-25 [东京残奥会开幕](/articles/dw/1040666.md)
 
 8-25 [德国武装阿富汗军队1万把手枪恐落入塔利班手中](/articles/dw/1040667.md)
-
-8-25 [Gouda：全球最受欢迎的奶酪](/articles/dw/1040668.md)
 
