--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-13 [恒大之困：从房产帝国到中国经济的“债务炸弹”](/articles/nyt/1046291.md)
+
 9-13 [简报：解读恒大“债务炸弹”；美国纪念9·11事件20周年](/articles/nyt/1046292.md)
 
 9-10 [拜登与习近平通电话，打破美中外交僵局](/articles/nyt/1046293.md)
@@ -598,6 +600,4 @@
 7-15 [巴基斯坦巴士爆炸，至少九名中国公民遇难](/articles/nyt/1046589.md)
 
 7-15 [简报：中国二季度经济增速放缓；专访“躺平学大师”](/articles/nyt/1046590.md)
-
-7-14 [“没有疫苗能治种族主义”：仍活在恐惧中的纽约亚裔](/articles/nyt/1046591.md)
 
