--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-13 [何俊仁请辞并退出支联会等三组织](/articles/dw/1040335.md)
+
 9-13 [斯坦福大学177名学者联名要求美司法部停止执行“中国行动计划”](/articles/dw/1040336.md)
 
 9-13 [德国大选电视辩论 对华政策继续缺位](/articles/dw/1040337.md)
@@ -598,6 +600,4 @@
 8-27 [美民调：过半数美国人支持派军防台 逾六成视中国为威胁](/articles/dw/1040633.md)
 
 8-27 [世卫首次发送中国疫苗  南非不想要](/articles/dw/1040634.md)
-
-8-27 [台湾国防预算创新高 但增幅并无显着提升](/articles/dw/1040635.md)
 
