--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+9-14 [思聪的南方纪事｜邓飞诉邹思聪何谦案二审判决，我们的回应](/articles/cdt/377809.md)
+
 9-13 [鱼眼观察｜容我给央视挑个“刺”](/articles/cdt/377813.md)
 
 9-13 [中式说法｜访民深夜求助书记，书记回复一个字：滚！](/articles/cdt/377816.md)
@@ -598,6 +600,4 @@
 8-7 [【404文库】余英时：警惕文革一套借民族主义还魂](/articles/cdt/379283.md)
 
 8-9 [【中国哭墙】我们都是你的眼睛，带你看明天的太阳（8月1-9日，2021年）](/articles/cdt/379284.md)
-
-8-7 [【CDTV】立场新闻 | 周冠威：勇气不灭](/articles/cdt/379286.md)
 
