--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+9-14 [情况有点复杂｜1969年，列侬和小野洋子上演“床上和平”，2021年，土壤改良乐队被迫在床上演出](/articles/cdt/377806.md)
+
 9-14 [思聪的南方纪事｜邓飞诉邹思聪何谦案二审判决，我们的回应](/articles/cdt/377809.md)
 
 9-13 [鱼眼观察｜容我给央视挑个“刺”](/articles/cdt/377813.md)
@@ -598,6 +600,4 @@
 8-7 [新知本｜德尔塔变异株流行，“总是有效”的连花清瘟又有效了](/articles/cdt/379281.md)
 
 8-7 [【404文库】余英时：警惕文革一套借民族主义还魂](/articles/cdt/379283.md)
-
-8-9 [【中国哭墙】我们都是你的眼睛，带你看明天的太阳（8月1-9日，2021年）](/articles/cdt/379284.md)
 
