--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-14 [习近平有意强化控制  中国面临新文革？](/articles/dw/1040316.md)
+
+9-14 [台湾经贸代表团将造访中东欧三国](/articles/dw/1040317.md)
+
 9-14 [德语媒体：欧洲端出“反华战略”](/articles/dw/1040318.md)
 
 9-14 [恒大危机 投资者上门讨债](/articles/dw/1040319.md)
@@ -596,8 +600,4 @@
 8-28 [美军事高官: 中国将速超俄罗斯成美国头号核威胁](/articles/dw/1040614.md)
 
 8-28 [美军舰再到台湾海峡“走一圈“ 北京强烈抗议](/articles/dw/1040615.md)
-
-8-28 [阿富汗袭击案件 美军展开报复](/articles/dw/1040616.md)
-
-8-28 [柏林的难题：中国](/articles/dw/1040617.md)
 
