--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+9-15 [华裔血统少女首夺美网冠军  网坛新秀展现多元文化自信](/articles/rfa/1044549.md)
+
 9-14 [被批垄断物资导致监狱特权后　囚权组织“石牆花”宣布解散](/articles/rfa/1044550.md)
 
 9-14 [香港国安法之手伸延至慈善团体       从业员：以后不敢与政府唱反调](/articles/rfa/1044551.md)
@@ -598,6 +600,4 @@
 8-10 [布林肯会新任日本安保局长  再强调维系台海和平稳定](/articles/rfa/1044847.md)
 
 8-10 [中俄演习剑指美国？  学者：既合作又较劲的矛盾组合](/articles/rfa/1044848.md)
-
-8-10 [台湾拟开放港澳生读高中 港人吁开放父母伴读](/articles/rfa/1044849.md)
 
