--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+9-15 [中国排球女将孙文静出柜："是我的全部，是一年又一年"](/articles/rfa/1044547.md)
+
+9-15 ["十一"临近   中国民主教育基金会联络湾区各族裔筹备抗议活动](/articles/rfa/1044548.md)
+
 9-15 [华裔血统少女首夺美网冠军  网坛新秀展现多元文化自信](/articles/rfa/1044549.md)
 
 9-14 [被批垄断物资导致监狱特权后　囚权组织“石牆花”宣布解散](/articles/rfa/1044550.md)
@@ -596,8 +600,4 @@
 8-10 [中国抗疫路线之争 “与病毒共存”还是“你死我活”？](/articles/rfa/1044845.md)
 
 8-10 [释善意无济于事 最大行业工会“香港教协”宣布解散](/articles/rfa/1044846.md)
-
-8-10 [布林肯会新任日本安保局长  再强调维系台海和平稳定](/articles/rfa/1044847.md)
-
-8-10 [中俄演习剑指美国？  学者：既合作又较劲的矛盾组合](/articles/rfa/1044848.md)
 
