--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-15 [简报：新书披露美军将领曾担心特朗普对华开战私下与北京沟通；法院称弦子诉朱军案“证据不足”](/articles/nyt/1046281.md)
+
 9-14 [棉布环保袋真的环保吗？](/articles/nyt/1046282.md)
 
 9-14 [“天上掉下来的好事”：改变韩国农村的“百元出租车”](/articles/nyt/1046283.md)
@@ -598,6 +600,4 @@
 7-16 [与坂本龙一对话：癌症、自然与时间](/articles/nyt/1046579.md)
 
 7-16 [美国的信念危机](/articles/nyt/1046580.md)
-
-7-16 [“好朋友也会有分歧”：拜登默克尔会面，美德关系回暖](/articles/nyt/1046581.md)
 
