--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+9-17 [普京将出席北京冬奥 参赛者可获疫苗接种](/articles/dw/1040256.md)
+
+9-17 [中俄领导人呼吁国际社会为阿富汗提供援助](/articles/dw/1040257.md)
+
+9-17 [柴可夫斯基：《曼弗雷德交响曲》](/articles/dw/1040258.md)
+
 9-17 [中国寻求加入CPTPP 台湾忧入会申请受影响](/articles/dw/1040259.md)
 
 9-17 [印度外长：建议中印从冲突地区各自撤军](/articles/dw/1040260.md)
@@ -594,10 +600,4 @@
 9-1 [拜登捍卫撤军决定 北京: 阿富汗迎来国家重建新起点](/articles/dw/1040554.md)
 
 8-31 [德语媒体：中国式的共同富裕](/articles/dw/1040555.md)
-
-8-31 [“当部长和送外卖 都是为人民服务”](/articles/dw/1040556.md)
-
-8-31 [“封面女郎”默克尔](/articles/dw/1040557.md)
-
-8-31 [欧盟实现疫苗接种里程碑 世卫却发出严厉警告](/articles/dw/1040558.md)
 
