--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-17 [欧盟“印太战略”提台湾 两岸相继回应](/articles/dw/1040255.md)
+
 9-17 [普京将出席北京冬奥 参赛者可获疫苗接种](/articles/dw/1040256.md)
 
 9-17 [中俄领导人呼吁国际社会为阿富汗提供援助](/articles/dw/1040257.md)
@@ -598,6 +600,4 @@
 9-1 [中国电玩限时禁令：美国家长及中国网民怎么看？](/articles/dw/1040553.md)
 
 9-1 [拜登捍卫撤军决定 北京: 阿富汗迎来国家重建新起点](/articles/dw/1040554.md)
-
-8-31 [德语媒体：中国式的共同富裕](/articles/dw/1040555.md)
 
