--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+9-19 [美国气候特使约翰‧克里压力重重会在人权问题让步？](/articles/rfi/1023747.md)
+
+9-19 [美英澳三方安全协议引发的多方反响 - 要闻解说](/articles/rfi/1023748.md)
+
 9-19 [中非共和国获世界银行金融支持基建](/articles/rfi/1023749.md)
 
 9-18 [塔利班政府取消妇女部 新设美德促进和防止犯罪部](/articles/rfi/1023750.md)
@@ -596,8 +600,4 @@
 9-10 [突尼斯社会大力推动接种Covid疫苗](/articles/rfi/1024045.md)
 
 9-10 [乌干达已准备好调兵赴刚果（金）东部](/articles/rfi/1024046.md)
-
-9-10 [中国房地产巨头恒大处于深渊的边缘 - 法国世界报](/articles/rfi/1024047.md)
-
-9-10 [刚果(金)调查中国企业被控藐视法律](/articles/rfi/1024048.md)
 
