--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-19 [房产抵债 恒大启动实物兑付](/articles/dw/1040232.md)
+
+9-19 [香港选委会选举：民主派近乎绝迹 警力多于选民](/articles/dw/1040233.md)
+
 9-19 [联合国：新冠疫情未减缓气候变化步伐](/articles/dw/1040234.md)
 
 9-19 [生物技术公司称可让已灭绝的猛犸象复活](/articles/dw/1040235.md)
@@ -596,8 +600,4 @@
 9-2 [得州实施“全美最严堕胎法“ 美最高法院未说“不“](/articles/dw/1040530.md)
 
 9-2 [纽约突降暴雨  地铁变水帘洞](/articles/dw/1040531.md)
-
-9-2 [谭德赛：我们请求中国给出这些数据](/articles/dw/1040532.md)
-
-9-2 [中国官媒称遭押加拿大商人偷拍中国军事装备](/articles/dw/1040533.md)
 
