--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+9-20 [为大幅提升法国战机效能 台湾与法国签支援协议](/articles/rfi/1023719.md)
+
 9-19 [让法国生气的核潜艇事件：英国人至此说了什么没有？](/articles/rfi/1023720.md)
 
 9-19 [CIA曾警告美军8月29日攻击目标有儿童 但晚了几秒](/articles/rfi/1023721.md)
@@ -598,6 +600,4 @@
 9-11 [911事件20周年：美国应该从中汲取什么教训 - 法国世界报](/articles/rfi/1024017.md)
 
 9-11 [南非2021年七月份骚乱的毁灭性代价](/articles/rfi/1024018.md)
-
-9-11 [马里过渡政府的优先事项不是选举](/articles/rfi/1024019.md)
 
