--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,26 @@
 法广
 ------
 
+9-20 [马达加斯加国际博览会上的替代木炭](/articles/rfi/1023709.md)
+
+9-20 [尼日利亚货币贬值 当局打击黑市换汇](/articles/rfi/1023710.md)
+
+9-20 [香港职工盟 启动解散程序](/articles/rfi/1023711.md)
+
+9-20 [上海、台北连线 办孔子文化节](/articles/rfi/1023712.md)
+
+9-20 [法国否认因瑞士军购争议取消两国总统会晤](/articles/rfi/1023713.md)
+
+9-20 [拜登预定21日在联合国大会发表演说](/articles/rfi/1023714.md)
+
+9-20 [美国务院证实 又有三十多美国人撤离阿富汗](/articles/rfi/1023715.md)
+
+9-20 [法国政要为什么对拜登政府如此伤心？ - 要闻分析](/articles/rfi/1023716.md)
+
+9-20 [议会下院选举落幕   统一俄罗斯党领先](/articles/rfi/1023717.md)
+
+9-20 [法取消和英国国防大臣之间的会议](/articles/rfi/1023718.md)
+
 9-20 [为大幅提升法国战机效能 台湾与法国签支援协议](/articles/rfi/1023719.md)
 
 9-19 [让法国生气的核潜艇事件：英国人至此说了什么没有？](/articles/rfi/1023720.md)
@@ -580,24 +600,4 @@
 9-11 [美国纪念9.11二十周年 拜登呼吁美国人团结 - 要闻解说](/articles/rfi/1024007.md)
 
 9-11 [9.11，喀布尔惊现数百罩袍蒙面女 集会支持塔利班](/articles/rfi/1024008.md)
-
-9-11 [9.11恐袭20周年 美国向3000遇难者致敬](/articles/rfi/1024009.md)
-
-9-11 [美国撤出 中国与阿富汗关系升温 - 法国报纸摘要](/articles/rfi/1024010.md)
-
-9-11 [请政府用实际行动支持民营经济！ - 微言微语](/articles/rfi/1024011.md)
-
-9-11 [王毅访越，强调将南海问题置于双方关系“适当位置” 不复杂不扩大](/articles/rfi/1024012.md)
-
-9-11 [李光满革命檄文延烧 大外宣指中南海应做反思](/articles/rfi/1024013.md)
-
-9-11 [拜习通话 习近平感觉良好？](/articles/rfi/1024014.md)
-
-9-11 [九一一20周年 法国舆论感叹 - 要闻分析](/articles/rfi/1024015.md)
-
-9-11 [港支联被控煽颠罪 邹幸彤质问六四屠城的责任该不该追究](/articles/rfi/1024016.md)
-
-9-11 [911事件20周年：美国应该从中汲取什么教训 - 法国世界报](/articles/rfi/1024017.md)
-
-9-11 [南非2021年七月份骚乱的毁灭性代价](/articles/rfi/1024018.md)
 
