--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+9-20 [地方土地流拍涌现   开发商集体“躺平”](/articles/rfa/1044507.md)
+
 9-18 [【制裁香港】美制裁7香港公司　5间涉伊朗革命卫队　2间涉中国公民](/articles/rfa/1044508.md)
 
 9-18 [维吾尔“失踪者之墙”日内瓦开幕   北京为何发怒？](/articles/rfa/1044509.md)
@@ -598,6 +600,4 @@
 8-16 [美国撤出阿富汗 战略核心转往印太区域与中国对抗](/articles/rfa/1044805.md)
 
 8-14 [提“与病毒共存”有罪？     江西教师被拘十五天    张文宏挨批美国走狗](/articles/rfa/1044806.md)
-
-8-14 [高智晟被绑架四年 妻子耿和：我坚贞不渝地等着他](/articles/rfa/1044807.md)
 
