--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+9-20 [经韬纬略智库｜财新：恒大何以至此（下篇）——危机溯源](/articles/cdt/377500.md)
+
+9-20 [经韬纬略智库｜财新：恒大何以至此（上篇）——危机袭来](/articles/cdt/377509.md)
+
 9-20 [Vista看天下｜她的评论区，是今年互联网上最好哭一幕](/articles/cdt/377511.md)
 
 9-19 [明报｜安徒行传：拒选亦能揽炒 躺平也会中枪](/articles/cdt/377584.md)
@@ -596,8 +600,4 @@
 8-14 [豆瓣｜瞿起田：洪水又至疫情猝发，这个深夜我想起一件往事](/articles/cdt/378976.md)
 
 8-14 [NGOCN｜“端点星”案宣判，陈玫、蔡伟将于8月15日获释](/articles/cdt/378979.md)
-
-8-14 [【CDT周报】第30期：“全球第一虚假信息国通过多渠道散布反智主义虚假信息”](/articles/cdt/378990.md)
-
-8-13 [人物 | 卷烟厂流水线上的名校大学生：我接受了平庸的自己](/articles/cdt/378999.md)
 
