--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+9-21 [默克尔留下怎样一个德国？ - 法国报纸摘要](/articles/rfi/1023674.md)
+
+9-21 [日本新冠感染者骤减 考虑全面解除紧急事态宣言](/articles/rfi/1023675.md)
+
 9-21 [法国再向阿基军人示善意 - 法国风土人情](/articles/rfi/1023676.md)
 
 9-21 [欧盟外交负责人警告马里 不要招募俄罗斯的雇佣军](/articles/rfi/1023677.md)
@@ -596,8 +600,4 @@
 9-13 [刚果(布)：旅游部组织布拉柴维尔游](/articles/rfi/1023972.md)
 
 9-13 [布基纳法索:库杜古大学工地事故](/articles/rfi/1023973.md)
-
-9-13 [中美日为何在越南角力 - 要闻分析](/articles/rfi/1023974.md)
-
-9-13 [黑石收购SOHO中国搁浅 潘石屹现身美国](/articles/rfi/1023975.md)
 
