--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+9-22 [小晖沉思｜昨天有个报道不对劲](/articles/cdt/377459.md)
+
 9-22 [立场新闻｜“中国维权律师关注组”宣布解散  上月被国安处要求交资料](/articles/cdt/377461.md)
 
 9-22 [【网络民议】市民未接种疫苗进政务大厅起争执被行政警告  网友：中国式自愿](/articles/cdt/377464.md)
@@ -598,6 +600,4 @@
 8-16 [维舟｜如果张文宏不能再发声](/articles/cdt/378923.md)
 
 8-16 [十年砍柴｜塔利班赢了，你高兴个啥？](/articles/cdt/378925.md)
-
-8-15 [【404档案馆】第19、20期：从吴亦凡到阿里巴巴，中国MeToo运动中的舆论操控](/articles/cdt/378928.md)
 
