--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+9-22 [36年前的今天，巴黎新桥“大变身” - 文化遗产](/articles/rfi/1023645.md)
+
 9-22 [拜登习近平联大远距离对决 - 要闻分析](/articles/rfi/1023646.md)
 
 9-22 [恒大地产声明周四将部分偿还到期的债务利息](/articles/rfi/1023647.md)
@@ -598,6 +600,4 @@
 9-14 [联合国秘书长敦促支持阿富汗人民 法国向阿富汗应急计划捐款1亿欧元](/articles/rfi/1023943.md)
 
 9-14 [总部遭投资者抗议围堵的恆大发声明否认破产重组](/articles/rfi/1023944.md)
-
-9-14 [白宫：拜登将主持四方安全对话 24日会晤日印澳领导人](/articles/rfi/1023945.md)
 
