--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+9-22 [“自由之家”公布网络自由排名   中国连续7年垫底  台湾排名第5](/articles/rfa/1044480.md)
+
 9-22 [南京学者郭泉恐再度被囚  母亲顾潇晚年孤独](/articles/rfa/1044481.md)
 
 9-22 [政府大力推广数字人民币  　民营支付宝、微信支付或将出局？](/articles/rfa/1044482.md)
@@ -598,6 +600,4 @@
 8-18 [支助香港抗争者基金即将停运   面对庞大讼费抗争者将求助无门](/articles/rfa/1044778.md)
 
 8-18 [美国国家安全顾问驳斥弃台说   蔡英文：台湾更坚定保卫自己](/articles/rfa/1044779.md)
-
-8-18 [学生会内部会议言论被秋后算帐 	       大学生被控“宣扬恐怖主义”被捕](/articles/rfa/1044780.md)
 
