--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-23 [新路线压缩外企角色 欧企忧心忡忡](/articles/dw/1040159.md)
+
+9-23 [德国大选鹿死谁手?](/articles/dw/1040160.md)
+
 9-23 [欧洲民调：新冷战开打，与我何干？](/articles/dw/1040161.md)
 
 9-23 [台湾中国双双申请加入CPTPP 门槛高变数多](/articles/dw/1040162.md)
@@ -596,8 +600,4 @@
 9-6 [德语媒体：名不副实的伙伴关系](/articles/dw/1040457.md)
 
 9-6 [NGO起诉德国5家大企业配合参与新疆强迫劳动](/articles/dw/1040458.md)
-
-9-6 [不满女性工作 阿富汗男子在柏林捅伤女园丁](/articles/dw/1040459.md)
-
-9-6 [客座评论：习近平为何要做第三份历史决议](/articles/dw/1040460.md)
 
