--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+9-24 [恒大老板许家印呼吁4000高管“全力以赴”兑现承诺](/articles/rfi/1023608.md)
+
 9-24 [民调：大多数欧洲人认为美中冷战已成事实](/articles/rfi/1023609.md)
 
 9-24 [法财长:潜艇危机表明欧洲不能再指望美国](/articles/rfi/1023610.md)
@@ -598,6 +600,4 @@
 9-15 [习近平拒绝与拜登面对面会谈](/articles/rfi/1023906.md)
 
 9-15 [福建确诊倍增 疫情扩散 厦门紧急封城](/articles/rfi/1023907.md)
-
-9-15 [中国继续加强对科技巨头企业的钳制 - 法国世界报](/articles/rfi/1023908.md)
 
