--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -61,6 +61,8 @@
 
 9-20 [【网络民议】中国版“我不能呼吸”又递刀子，差别是屁民“命硬”？](/articles/cdt/377515.md)
 
+9-24 [【CDT连载】刑事判决书里的中国（05）](/articles/cdt/377528.md)
+
 9-23 [【CDT连载】刑事判决书里的中国（04）](/articles/cdt/377529.md)
 
 9-22 [【CDT连载】刑事判决书里的中国（03）](/articles/cdt/377530.md)
@@ -598,6 +600,4 @@
 8-18 [假装在东京｜成功激怒全体在日华人的“抗日小能手”事件始末](/articles/cdt/378837.md)
 
 8-18 [德国之声｜ 香港民阵宣布解散  中国媒体称“咎由自取”](/articles/cdt/378864.md)
-
-8-18 [导筒directube｜在豆瓣电影打响的“抗日战争”](/articles/cdt/378866.md)
 
