--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-24 [美气候特使克里将再次访华](/articles/voa/1038021.md)
+
 9-24 [香港民主派初选47人被控串谋颠覆案 再押后至11月29日提讯](/articles/voa/1038022.md)
 
 9-24 [波音看好中国航空业发展势头 美中对抗前景构成最大变数](/articles/voa/1038023.md)
@@ -598,6 +600,4 @@
 9-10 [白宫要义：拜登、习近平二度通话“确保美中竞争不会演变成冲突”](/articles/voa/1038319.md)
 
 9-10 [拜登颁布全面的疫苗接种措施](/articles/voa/1038320.md)
-
-9-10 [9/11英雄：一位地铁司机如何挽救了数百人生命](/articles/voa/1038321.md)
 
