--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-24 [新书曝光与中国将军通话等细节后 非政治性的美最高军官再陷争议中心](/articles/voa/1038014.md)
+
+9-24 [谭德塞有望连任世界卫生组织总干事](/articles/voa/1038015.md)
+
 9-24 [美国海地事务特使辞职，抗议驱离移民“不人道”](/articles/voa/1038016.md)
 
 9-24 [今日中国是昨日德国？还是“拉民族大旗作虎皮”？](/articles/voa/1038017.md)
@@ -596,8 +600,4 @@
 9-10 [邹幸彤展示六四风骨，挑战港府法庭，期待六四追责辩论](/articles/voa/1038312.md)
 
 9-10 [动员兵力10万 日本陆上自卫队将举行28年来最大军演](/articles/voa/1038313.md)
-
-9-10 [国会共和党议员对华为获准购买芯片表示担忧](/articles/voa/1038314.md)
-
-9-10 [专访诺丁：谈中国外交思想与战狼外交](/articles/voa/1038315.md)
 
