--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-24 [债权人未收到付款 恒大摇摇欲坠?](/articles/dw/1040155.md)
+
 9-23 [英国食品供应紧张 政府呼吁民众不必恐慌](/articles/dw/1040156.md)
 
 9-23 [德语媒体: 停止新建海外煤电 中国意欲抢占绿能市场](/articles/dw/1040157.md)
@@ -598,6 +600,4 @@
 9-7 [北约呼吁中国加入军备控制谈判](/articles/dw/1040453.md)
 
 9-7 [群星璀璨威尼斯电影节](/articles/dw/1040454.md)
-
-9-6 [“饭圈整治”扩大到韩娱圈 多个粉丝团被禁言](/articles/dw/1040455.md)
 
