--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+9-24 [简报：恒大命运悬而未决股价回升；阿富汗维吾尔人担忧人身安全](/articles/nyt/1046248.md)
+
+9-24 [温家宝家族商业合伙人段伟红被拘留](/articles/nyt/1046249.md)
+
 9-23 [《尚气》全球大热，但中国也许不欢迎它](/articles/nyt/1046250.md)
 
 9-23 [美国解除旅行禁令，分离的华人家庭几时团圆？](/articles/nyt/1046251.md)
@@ -596,8 +600,4 @@
 7-23 [香港政府的最新打压对象：儿童绘本](/articles/nyt/1046546.md)
 
 7-23 [简报：东京奥运在担忧和争议中迎来开幕式；郑州洪灾死亡人数升至33人](/articles/nyt/1046547.md)
-
-7-22 [如果奥运会取消了，你会怀念它吗？](/articles/nyt/1046548.md)
-
-7-22 [你是个“贝佐斯”吗？](/articles/nyt/1046549.md)
 
